tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/valid/basic-ads.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [
            'config' => [
                'app_id' => 'id',
                'app_secret' => 'secret',
            ],
        ],
    ],
];
