tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/only-app_id-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'config' => [
                'app_id' => 'id',
            ],
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
